--- a/sass/modules/_service-area-slider.scss
+++ b/sass/modules/_service-area-slider.scss
@@ -71,7 +71,7 @@
             &.style-1{
                 .border-wrapper{
                     @include sm{
-                        margin-top: 24px !important;
+                        margin-top: 32px !important;
                     }
                     @include md{
                         margin-top: 24px !important;
